# Statistical-ML-Analysis-Toolkit

./: .gitignore  README.md  cdfs.py  config.py  csv_merger.py  data_loader.py  file_type_converter.py  global_descriptive_generator.py  gmm_analysis.py  impossible_var_cleaner.py  main_gui.py  multivariate_exploration.py  olr_mlm.py  pyproject.toml  requirements.txt  rm_anova_icc.py
app_styles/: load_css.py  main.css
pipelines/data_organizers/: csv_loader.py  csv_merger.py  file_pathways.py  impossible_var_cleaner.py  type_converter.py
pipelines/ml/: gmm_analysis.py  olr.py  olr_mlm.py  ols.py  rm_anova_icc.py
pipelines/statistics/: all_single_var_desc_gen.py  chi_sqr.py  master_descriptive_gen.py  multivar_desc_gen.py
pipelines/statistics/png_generators/: desc_gen.py  hm_gen.py  pg_gen.py  pp_gen.py
pipelines/utility/: cdfs.py
statistical_ml_toolkit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
