[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "statistical-ml-toolkit"
version = "0.1.0"
description = "A toolkit for statistical machine learning"
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["pipelines*", "config*"]

[tool.setuptools]
py-modules = ["config", "main"]